--- a/API2.HTML
+++ b/API2.HTML
@@ -32,7 +32,8 @@
          .then(res => res.json())
          .then(data => ({
             image: data.image.url,
-            name: data.name
+            name: data.name,
+            age: data.age
          }));
    }
 
